Microservice-b/Istio Rules/microservice-b-virtualservice-delay.yaml
# We can inject delays into the request as

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-b
spec:
  hosts:
  - microservice-b
  gateways:
  - microservice-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: microservice-b
        subset: v1
    fault:
      delay:
        percent: 100
        fixedDelay: 5s
