Microservice-b/Istio Rules/microservice-b-virtualservice-trafficsplitting.yaml
# Rather than routing 100% of the traffic to v1, you can also configure weights so that you can route x% of traffic to v1, and y% of traffic to v2

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-b
spec:
  hosts:
  - microservice-b
  gateways:
  - microservice-gateway
 http:
  - match:
    - uri:
        prefix: /microservice-b
    rewrite:
      uri: /
    route:
    - destination:
        host: microservice-b
        subset: v1
      weight: 50
    - destination:
        host: microservice-b
        subset: v2
      weight: 50
