Microservice-b/Istio Rules/microservice-b-virtualservice-v1.yaml
# For routing 1000% of the traffic to v1.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-b
spec:
  hosts:
  - "*"
  gateways:
  - microservice-gateway
 http:
  - match:
    - uri:
        prefix: /microservice-b
    rewrite:
      uri: /
    route:
    - destination:
        host: microservice-b
        subset: v1
